# spot_manipulation

./: .gitignore  LICENSE  README.md
apriltag_ros/: README.md
apriltag_ros/apriltag_ros/cfg/: affordance_tag.yaml
apriltag_ros/apriltag_ros/launch/: affordance_detection.launch.py
detgpt_img2grasp_msgs/: CMakeLists.txt  package.xml
detgpt_img2grasp_msgs/action/: DetectObject.action  Img2Grasp.action
spot_curobo_config/: CMakeLists.txt  link_meshes.bash  package.xml  setup.bash  spot_curobo.yaml
spot_curobo_config/config/: spot.xrdf
spot_curobo_config/launch/: visualize_spheres.launch.xml
spot_curobo_config/rviz/: sphere_visualization.rviz
spot_curobo_config/src/: visualize_spheres.cpp
spot_curobo_config/urdf/: spot.urdf
spot_manipulation_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
spot_manipulation_driver/config/: apriltag_tags.yaml  arm_teleop_dualsense5.yaml  arm_teleop_joy.yaml  arm_teleop_logitech.yaml  joint_names.yaml  spot_arm.yaml
spot_manipulation_driver/include/spot_manipulation_driver/: manipulation_driver_util.py
spot_manipulation_driver/launch/: apriltag_detection.launch  arm_teleop_joy.launch.py  cameras.launch  nrg_spot_driver.launch  spacenav_control.launch.py
spot_manipulation_driver/scripts/: follow_joint_trajectory_action_server.py  spot_cameras
spot_manipulation_driver/scripts/spot_manipulation_driver/: follow_joint_trajectory_action_server.py  image_viewer_nrg.py  manipulation_driver_temoto.py  nrg_spot_cameras.py  nrg_spot_driver copy.py  nrg_spot_driver.py  spot_cameras.py
spot_manipulation_driver/spot_manipulation_driver/: arduino.py  combined_driver_node.py  get_points.py  manipulation_driver.py  manipulation_driver_node.py  manipulation_driver_util.py  msg_conv_test.py  ros_helpers.py  spot_arm_node.py  spot_manipulation_driver.py  spot_manipulation_driver_ros.py  spot_node_combined.py  trajectory_manager.py
spot_manipulation_driver/src/: twist_filter.cpp
spot_manipulation_driver/src/spot_manipulation_driver/: .spot_cameras.py.swp  spot_cameras.py
spot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
spot_moveit_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  sensors_3d.yaml  spot.ros2_control.xacro  spot.srdf  spot.srdf.xacro  spot.urdf.xacro
spot_moveit_config/config/accessories/: eap.srdf.xacro  eap_2.srdf.xacro  rl_kit.srdf.xacro  rl_kit_velodyne.xacro
spot_moveit_config/launch/: demo.launch.py  fake_controller.launch.py  move_group.launch.py  moveit_rviz.launch.py  spot_execution.launch.py
spot_moveit_config/src/: stable_arm_motion_demo.py  stable_arm_motion_server.cpp
